--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "heroicons": "^2.0.10",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.0.1",
