--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@supabase/supabase-js": "^1.35.6",
+    "axios": "^0.27.2",
     "heroicons": "^2.0.10",
     "next": "12.2.0",
     "react": "18.2.0",
