--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^1.0.6",
     "@supabase/supabase-js": "^1.35.6",
     "heroicons": "^2.0.10",
+    "javascript-time-ago": "^2.5.7",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
